# backend-i

session14/: pyproject.toml
session14/mysite/: db.sqlite3
sessions/session10/: pyproject.toml
sessions/session11/: pyproject.toml
sessions/session12/: Makefile  README.md  compose.yaml  dockerfile  (+1 more)
sessions/ticketing_project/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
sessions/ticketing_project/.devcontainer/: devcontainer.json
sessions/ticketing_project/django_app/: db.sqlite3
sessions/ticketing_project/django_app/ticketing_system/: settings.py  urls.py
sessions/ticketing_project/django_app/tickets/: models.py  views.py
sessions/ticketing_project/tests/: test_views.py
sessions/ticketing_project/ticketing_system/: settings.py  urls.py
sessions/ticketing_project/tickets/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
sessions/ticketing_project/tickets/migrations/: 0001_initial.py  0002_alter_comment_options_alter_ticket_options_and_more.py  0002_alter_ticket_priority.py  0003_alter_comment_options_alter_comment_is_internal_and_more.py  0004_alter_comment_options_alter_comment_is_internal_and_more.py
sessions/ticketing_project/tickets/templates/: base.html
sessions/ticketing_project/tickets/templates/registration/: login.html  signup.html
sessions/ticketing_project/tickets/templates/tickets/: admin_create_agent.html  admin_dashboard.html  agent_dashboard.html  customer_dashboard.html  ticket_assign.html  ticket_detail.html  ticket_form.html  ticket_list.html  ticket_update_form.html
(+60 files in other folders)
